Changed the column layout for the AI form and replaced buttons with icons

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -110,7 +110,7 @@
 
                         <li class="nav-small-cap">--- FILES</li>
                         <li *ngIf="isHouseDoctor() || isCardiolog()"> <a class="waves-effect waves-dark" href="#"
-                                routerLink="doctor-dashboard"><i class="fas fa-id-card-alt"></i><span
+                                routerLink="doctor-dashboard"><i class="far fa-file-archive"></i><span
                                     class="hide-menu">File System</span></a></li>
 
                         <li class="nav-small-cap">--- SUPPORT</li>
