--- a/Frontend/src/app/patient/patient-overview/buttons/ai-prediction-button/ai-prediction-button.component.html
+++ b/Frontend/src/app/patient/patient-overview/buttons/ai-prediction-button/ai-prediction-button.component.html
@@ -1,1 +1,1 @@
-<button (click)="aiPrediction()" class="btn btn-sm btn-outline-secondary">AI Prediction for {{patient.firstName}} {{patient.lastName}}</button>
+<button (click)="aiPrediction()" class="btn btn-sm btn-outline-secondary"><i class="fas fa-laptop-medical"></i></button>
