--- a/Frontend/src/app/patient/patient-overview/buttons/archives-button/archives-button.component.html
+++ b/Frontend/src/app/patient/patient-overview/buttons/archives-button/archives-button.component.html
@@ -1,1 +1,1 @@
-<button (click)="archives()" class="btn btn-sm btn-outline-secondary">{{patient.firstName}} {{patient.lastName}}'s Archives</button>
+<button (click)="archives()" class="btn btn-sm btn-outline-secondary"><i class="fas fa-archive"></i></button>
