--- a/Frontend/src/app/app.component.css
+++ b/Frontend/src/app/app.component.css
@@ -9,6 +9,15 @@
     padding-top: 20px !important;
 }
 
+.navbar-header .navbar-brand {
+    margin-right: 20px;
+}
+
+.display-flex {
+    display: flex !important;
+}
+
+
 .close-button {
     position: absolute;
     top: 10px; 
