--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -7,7 +7,7 @@
                 <button class="navbar-toggler custom-hamburger-display" type="button" (click)="toggleSidebar()">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-header d-flex justify-content-between align-items-center">
+                <div class="navbar-header d-flex display-flex justify-content-between align-items-center">
                     <a class="navbar-brand"><b>
                             <img src="./assets/images/logo.png" alt="logo" class="light-logo" />
                         </b>
@@ -83,9 +83,7 @@
         </header>
         <aside class="left-sidebar" [class.open]="isSidebarOpen">
             <div class="scroll-sidebar">
-                <div class="close-button custom-hamburger-display" (click)="toggleSidebar()">
-                    <i class="material-icons">close</i>
-                </div>
+
                 <nav class="sidebar-nav">
                     <ul id="sidebarnav">
                         <li class="nav-small-cap">--- PAGES</li>
