Beginning for documents tab

--- a/Frontend/src/app/app.component.css
+++ b/Frontend/src/app/app.component.css
@@ -1,67 +1,66 @@
 .left-sidebar {
-    width: 220px;
-    height: 100%;
-    top: 67px;
-    overflow-y: auto;
-    transition: all 0.3s;
-    left: 0;
-    z-index: 1000;
-    padding-top: 20px !important;
+  width: 220px;
+  height: 100%;
+  top: 67px;
+  overflow-y: auto;
+  transition: all 0.3s;
+  left: 0;
+  z-index: 1000;
+  padding-top: 20px !important;
 }
 
 .navbar-header .navbar-brand {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 
 .display-flex {
-    display: flex !important;
+  display: flex !important;
 }
 
-
 .close-button {
-    position: absolute;
-    top: 10px; 
-    right: 10px; 
-    cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
 }
 
 .close-button i {
-    font-size: 16px;
-    color: #ffffff; 
-    padding: 8px; 
-    background-color: #343a40;
-    border-radius: 50%; 
+  font-size: 16px;
+  color: #ffffff;
+  padding: 8px;
+  background-color: #343a40;
+  border-radius: 50%;
 }
 
 .custom-hamburger-display {
-    display: none;
+  display: none;
 }
 
 .navbar-header {
-    width: 100%;
+  width: 100%;
 }
 
 .navbar-toggler:focus {
-    box-shadow: none !important;
+  box-shadow: none !important;
 }
 
 @media (max-width: 1024px) {
+  .left-sidebar {
+    position: fixed;
+    left: -250px;
+    z-index: 1000;
+  }
 
-    .left-sidebar {
-        position: fixed;
-        left: -250px;
-        z-index: 1000;
-    }
-  
-    .left-sidebar.open {
-        left:0;
-    }
-  
-    .page-wrapper, .footer {
-        margin-left: 0;
-    }
+  .left-sidebar.open {
+    left: 0;
+  }
 
-    .custom-hamburger-display {
-        display: block;
-    }
+  .page-wrapper,
+  .footer {
+    margin-left: 0;
+  }
+
+  .custom-hamburger-display {
+    display: block;
+  }
 }
