--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -96,66 +96,36 @@
               <!-- <a class="nav-link dropdown-toggle waves-effect waves-dark profile-pic" href=""
                             data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="" alt="user"
                                 class=""></a> -->
-                            <div class="dropdown-menu dropdown-menu-end animated flipInY">
-                                <a class="dropdown-item"><i class="ti-user"></i> My Profile</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item"><i class="ti-settings"></i> Account Settings</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" (click)="logout()"><i class="fa fa-power-off"></i> Logout</a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
-        <aside class="left-sidebar" [class.open]="isSidebarOpen">
-            <div class="scroll-sidebar">
-                <div class="close-button custom-hamburger-display" (click)="toggleSidebar()">
-                    <i class="material-icons">close</i>
-                </div>
-                <nav class="sidebar-nav">
-                    <ul id="sidebarnav">
-                        <li class="nav-small-cap">--- PAGES</li>
-                        <li *ngIf="isHouseDoctor()"> <a class="waves-effect waves-dark" href="#"
-                                routerLink="doctor-dashboard"><i class="far fa-chart-bar"></i><span
-                                    class="hide-menu">Dashboard</span></a></li>
-                        <li *ngIf="isCardiolog()"> <a class="waves-effect waves-dark" href="#"
-                                routerLink="cardiologist-dashboard"><i class="far fa-chart-bar"></i><span
-                                    class="hide-menu">Dashboard</span></a></li>
-                        <li *ngIf="isCardiolog()"> <a class="waves-effect waves-dark" href="#" routerLink="calendar"><i
-                                    class="fas fa-calendar"></i><span class="hide-menu">Calendar</span></a></li>
-                        <li> <a class="waves-effect waves-dark" href="#" routerLink="patients"><i
-                                    class="fas fa-heartbeat"></i><span class="hide-menu">Patients</span></a></li>
-
-                        <li class="nav-small-cap">--- DOCUMENTS</li>
-                        <li *ngIf="isHouseDoctor() || isCardiolog()"> <a class="waves-effect waves-dark" href="#"
-                                routerLink="videos"><i class="fab fa-youtube"></i><span
-                                    class="hide-menu">Videos</span></a></li>
-                        <li *ngIf="isHouseDoctor() || isCardiolog()"> <a class="waves-effect waves-dark" href="#"
-                                routerLink="doctor-dashboard"><i class="far fa-file-archive"></i><span
-                                    class="hide-menu">File System</span></a></li>
-
-                        <li class="nav-small-cap">--- SUPPORT</li>
-                        <li><a class="waves-effect waves-dark" aria-expanded="false" (click)="logout()"><i
-                                    class="fa fa-power-off"></i><span class="hide-menu">Log Out</span></a></li>
-                    </ul>
-                </nav>
-            </div>
-        </aside>
-        <div class="page-wrapper">
-            <router-outlet></router-outlet>
+              <div class="dropdown-menu dropdown-menu-end animated flipInY">
+                <a class="dropdown-item"><i class="ti-user"></i> My Profile</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item"><i class="ti-settings"></i> Account Settings</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" (click)="logout()"><i class="fa fa-power-off"></i> Logout</a>
+              </div>
+            </li>
+          </ul>
         </div>
       </nav>
     </header>
     <aside class="left-sidebar" [class.open]="isSidebarOpen">
       <div class="scroll-sidebar">
+        <div class="close-button custom-hamburger-display" (click)="toggleSidebar()">
+          <i class="material-icons">close</i>
+        </div>
         <nav class="sidebar-nav">
           <ul id="sidebarnav">
             <li class="nav-small-cap">--- PAGES</li>
-            <li>
-              <a class="waves-effect waves-dark" href="#" routerLink="home-page"
-                ><i class="fas fa-home"></i
-                ><span class="hide-menu">Home Page</span></a
+            <li *ngIf="isHouseDoctor()">
+              <a class="waves-effect waves-dark" href="#" routerLink="doctor-dashboard"
+                ><i class="far fa-chart-bar"></i
+                ><span class="hide-menu">Dashboard</span></a
+              >
+            </li>
+            <li *ngIf="isCardiolog()">
+              <a class="waves-effect waves-dark" href="#" routerLink="cardiologist-dashboard"
+                ><i class="far fa-chart-bar"></i
+                ><span class="hide-menu">Dashboard</span></a
               >
             </li>
             <li *ngIf="isCardiolog()">
@@ -170,12 +140,20 @@
                 ><span class="hide-menu">Patients</span></a
               >
             </li>
-            <!-- <li>
-  <a class="waves-effect waves-dark" href="#" routerLink="documents"
-    ><i class="fas fa-file"></i
-    ><span class="hide-menu">Documents</span></a
-  >
-</li> -->
+
+            <li class="nav-small-cap">--- DOCUMENTS</li>
+            <li *ngIf="isHouseDoctor() || isCardiolog()">
+              <a class="waves-effect waves-dark" href="#" routerLink="videos"
+                ><i class="fab fa-youtube"></i
+                ><span class="hide-menu">Videos</span></a
+              >
+            </li>
+            <li *ngIf="isHouseDoctor() || isCardiolog()">
+              <a class="waves-effect waves-dark" href="#" routerLink="doctor-dashboard"
+                ><i class="far fa-file-archive"></i
+                ><span class="hide-menu">File System</span></a
+              >
+            </li>
 
             <li class="nav-small-cap">--- SUPPORT</li>
             <li>
