--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -149,7 +149,7 @@
               >
             </li>
             <li *ngIf="isHouseDoctor() || isCardiolog()">
-              <a class="waves-effect waves-dark" href="#" routerLink="doctor-dashboard"
+              <a class="waves-effect waves-dark"
                 ><i class="far fa-file-archive"></i
                 ><span class="hide-menu">File System</span></a
               >
