--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -123,7 +123,7 @@
               >
             </li>
             <li *ngIf="isCardiolog()">
-              <a class="waves-effect waves-dark" href="#" routerLink="cardiologist-dashboard"
+              <a class="waves-effect waves-dark" routerLink="cardiologist-dashboard"
                 ><i class="far fa-chart-bar"></i
                 ><span class="hide-menu">Dashboard</span></a
               >
