--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,52 +1,27 @@
-<link
-  href="https://fonts.googleapis.com/icon?family=Material+Icons"
-  rel="stylesheet"
-/>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
 <body class="skin-megna fixed-layout">
   <div *ngIf="isLoggedIn" id="main-wrapper">
     <header class="topbar">
       <nav class="navbar top-navbar navbar-expand-md navbar-dark">
-        <button
-          class="navbar-toggler custom-hamburger-display"
-          type="button"
-          (click)="toggleSidebar()"
-        >
+        <button class="navbar-toggler custom-hamburger-display" type="button" (click)="toggleSidebar()">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div
-          class="navbar-header d-flex display-flex justify-content-between align-items-center"
-        >
-          <a class="navbar-brand"
-            ><b>
-              <img
-                src="./assets/images/logo.png"
-                alt="logo"
-                class="light-logo"
-              />
+        <div class="navbar-header d-flex display-flex justify-content-between align-items-center">
+          <a class="navbar-brand"><b>
+              <img src="./assets/images/logo.png" alt="logo" class="light-logo" />
             </b>
             <span class="hidden-xs"> FromHearty</span>
           </a>
 
-          <div
-            (click)="toggleAccessibilitySettings()"
-            style="
+          <div (click)="toggleAccessibilitySettings()" style="
               display: flex;
               align-items: center;
               cursor: pointer;
               margin-right: 20px;
-            "
-          >
-            <i
-              *ngIf="isAccessibilityOn"
-              class="fas fa-eye-slash"
-              style="font-size: 18px; color: white"
-            ></i>
-            <i
-              *ngIf="!isAccessibilityOn"
-              class="fas fa-eye"
-              style="font-size: 18px; color: white"
-            ></i>
+            ">
+            <i *ngIf="isAccessibilityOn" class="fas fa-eye-slash" style="font-size: 18px; color: white"></i>
+            <i *ngIf="!isAccessibilityOn" class="fas fa-eye" style="font-size: 18px; color: white"></i>
           </div>
         </div>
         <div class="navbar-collapse">
@@ -117,53 +92,46 @@
           <ul id="sidebarnav">
             <li class="nav-small-cap">--- PAGES</li>
             <li *ngIf="isHouseDoctor()">
-              <a class="waves-effect waves-dark" href="#" routerLink="doctor-dashboard"
-                ><i class="far fa-chart-bar"></i
-                ><span class="hide-menu">Dashboard</span></a
-              >
+              <a class="waves-effect waves-dark" href="#" routerLink="doctor-dashboard"><i
+                  class="far fa-chart-bar"></i><span class="hide-menu">Dashboard</span></a>
             </li>
             <li *ngIf="isCardiolog()">
-              <a class="waves-effect waves-dark" routerLink="cardiologist-dashboard"
-                ><i class="far fa-chart-bar"></i
-                ><span class="hide-menu">Dashboard</span></a
-              >
+              <a class="waves-effect waves-dark" routerLink="cardiologist-dashboard"><i
+                  class="far fa-chart-bar"></i><span class="hide-menu">Dashboard</span></a>
             </li>
             <li *ngIf="isCardiolog()">
-              <a class="waves-effect waves-dark" href="#" routerLink="calendar"
-                ><i class="fas fa-calendar"></i
-                ><span class="hide-menu">Calendar</span></a
-              >
+              <a class="waves-effect waves-dark" href="#" routerLink="calendar"><i class="fas fa-calendar"></i><span
+                  class="hide-menu">Calendar</span></a>
             </li>
             <li>
-              <a class="waves-effect waves-dark" href="#" routerLink="patients"
-                ><i class="fas fa-heartbeat"></i
-                ><span class="hide-menu">Patients</span></a
-              >
+              <a class="waves-effect waves-dark" href="#" routerLink="patients"><i class="fas fa-heartbeat"></i><span
+                  class="hide-menu">Patients</span></a>
             </li>
 
             <li class="nav-small-cap">--- DOCUMENTS</li>
             <li *ngIf="isHouseDoctor() || isCardiolog()">
-              <a class="waves-effect waves-dark" href="#" routerLink="videos"
-                ><i class="fab fa-youtube"></i
-                ><span class="hide-menu">Videos</span></a
-              >
+              <a class="waves-effect waves-dark" href="#" routerLink="videos"><i class="fab fa-youtube"></i><span
+                  class="hide-menu">Videos</span></a>
             </li>
             <li *ngIf="isHouseDoctor() || isCardiolog()">
-              <a class="waves-effect waves-dark"
-                ><i class="far fa-file-archive"></i
-                ><span class="hide-menu">File System</span></a
-              >
+              <a class="waves-effect waves-dark"><i class="far fa-file-archive"></i><span class="hide-menu">File
+                  System</span></a>
+            </li>
+
+            <li class="nav-small-cap">--- CONTACTS</li>
+            <li>
+              <a class="waves-effect waves-dark" href="#" routerLink="house-doctors"><i class="fas fa-stethoscope"></i><span
+                  class="hide-menu">House Doctors</span></a>
+            </li>
+            <li>
+              <a class="waves-effect waves-dark" routerLink="cardiologists"><i class="fas fa-hand-holding-heart"></i><span
+                  class="hide-menu">Cardiologists</span></a>
             </li>
 
             <li class="nav-small-cap">--- SUPPORT</li>
             <li>
-              <a
-                class="waves-effect waves-dark"
-                aria-expanded="false"
-                (click)="logout()"
-                ><i class="fa fa-power-off"></i
-                ><span class="hide-menu">Log Out</span></a
-              >
+              <a class="waves-effect waves-dark" aria-expanded="false" (click)="logout()"><i
+                  class="fa fa-power-off"></i><span class="hide-menu">Log Out</span></a>
             </li>
           </ul>
         </nav>
