File system now in function

--- a/Frontend/src/app/documents/buttons/view-edit-button/view-edit-button.component.html
+++ b/Frontend/src/app/documents/buttons/view-edit-button/view-edit-button.component.html
@@ -1,6 +1,6 @@
-<button (click)="viewDocument()" class="btn btn-sm btn-outline-secondary">
+<!-- <button (click)="viewDocument()" class="btn btn-sm btn-outline-secondary">
   Edit
-</button>
+</button> -->
 <button (click)="downloadDocument()" class="btn btn-sm btn-outline-primary">
   Download
 </button>
