--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -114,7 +114,7 @@
                   class="hide-menu">Videos</span></a>
             </li>
             <li *ngIf="isHouseDoctor() || isCardiolog()">
-              <a class="waves-effect waves-dark"><i class="far fa-file-archive"></i><span class="hide-menu">File
+              <a class="waves-effect waves-dark" routerLink="documents"><i class="far fa-file-archive"></i><span class="hide-menu">File
                   System</span></a>
             </li>
 
