--- a/Frontend/src/app/documents/documents.component.html
+++ b/Frontend/src/app/documents/documents.component.html
@@ -1,20 +1,20 @@
 <div class="container-fluid">
   <div class="row page-titles">
     <div class="col-12 col-sm-3 col-md-5 align-self-center">
-      <h4 class="text-themecolor">Documents</h4>
+      <h4 class="text-themecolor">File system</h4>
     </div>
     <div class="col-12 col-sm-9 col-md-7 align-self-center text-end">
       <div class="d-flex display-flex justify-content-end align-items-center">
         <ol class="breadcrumb justify-content-end">
           <li class="breadcrumb-item">Pages</li>
-          <li class="breadcrumb-item active">Documents</li>
+          <li class="breadcrumb-item active">File system</li>
         </ol>
       </div>
     </div>
   </div>
 </div>
 
-<button class="btn btn-primary mb-3" (click)="fileInput.click()">
+<button class="btn btn-primary mb-3" style="margin-left: 10px;" (click)="fileInput.click()">
   <i class="fa fa-file"></i> Upload
 </button>
 <input
