--- a/Frontend/src/assets/style.css
+++ b/Frontend/src/assets/style.css
@@ -6410,6 +6410,11 @@ fieldset:disabled .btn {
   color: green;
 }
 
+.predict-result {
+  font-weight: bold !important;
+  font-size: 16px;
+}
+
 .bad-option {
   color: orange
 }
