#268 - Prediction modal is improved

--- a/Frontend/src/app/home-doctor/ai-prediction/popups/results-popup/results-popup.component.html
+++ b/Frontend/src/app/home-doctor/ai-prediction/popups/results-popup/results-popup.component.html
@@ -3,15 +3,17 @@
     <button type="button" class="btn-close" aria-label="Close" (click)="closeModalAndClearForm()"></button>
 </div>
 <div class="modal-body">
-    <div class="justify-content-center align-items-center" [class.show-message]="predictionMessage">
-        <div class="custom-message">
-            <div [innerHTML]="predictionMessage"></div>
+    <ng-container *ngFor="let predictionMessage of predictionMessages">
+        <div class="justify-content-center align-items-center" [class.show-message]="predictionMessage">
+            <div class="custom-message">
+                <div [innerHTML]="predictionMessage"></div>
+            </div>
         </div>
-    </div>
+    </ng-container>
 </div>
 <div class="modal-footer">
     <div class="d-flex justify-content-center align-items-center flex-row gap-2">
-        <button type="button" class="btn btn-secondary" (click)="predictWithOpenAI()">Get an explanation
+        <button *ngIf="!isUsingOpenAI" type="button" class="btn btn-secondary" (click)="predictWithOpenAI()">Get an explanation
         </button>
         <button type="button" class="btn btn-primary ml-2" (click)="bookAnAppointment()">
             Book an Appointment
